; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_AddDynList.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_AddDynList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i8** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AddDynList(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  br label %53

11:                                               ; preds = %1
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @SeekBufToBegin(i32* %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32* @BufToPack(i32* %14)
  store i32* %15, i32** %3, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %11
  br label %53

19:                                               ; preds = %11
  %20 = load i32*, i32** %3, align 8
  %21 = call %struct.TYPE_4__* @GetPackElementNames(i32* %20)
  store %struct.TYPE_4__* %21, %struct.TYPE_4__** %4, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %23 = icmp ne %struct.TYPE_4__* %22, null
  br i1 %23, label %24, label %50

24:                                               ; preds = %19
  store i64 0, i64* %5, align 8
  br label %25

25:                                               ; preds = %44, %24
  %26 = load i64, i64* %5, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp ult i64 %26, %29
  br i1 %30, label %31, label %47

31:                                               ; preds = %25
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 1
  %34 = load i8**, i8*** %33, align 8
  %35 = load i64, i64* %5, align 8
  %36 = getelementptr inbounds i8*, i8** %34, i64 %35
  %37 = load i8*, i8** %36, align 8
  store i8* %37, i8** %6, align 8
  %38 = load i32*, i32** %3, align 8
  %39 = load i8*, i8** %6, align 8
  %40 = call i32 @PackGetInt64(i32* %38, i8* %39)
  store i32 %40, i32* %7, align 4
  %41 = load i8*, i8** %6, align 8
  %42 = load i32, i32* %7, align 4
  %43 = call i32 @SetDynListValue(i8* %41, i32 %42)
  br label %44

44:                                               ; preds = %31
  %45 = load i64, i64* %5, align 8
  %46 = add i64 %45, 1
  store i64 %46, i64* %5, align 8
  br label %25

47:                                               ; preds = %25
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %49 = call i32 @FreeToken(%struct.TYPE_4__* %48)
  br label %50

50:                                               ; preds = %47, %19
  %51 = load i32*, i32** %3, align 8
  %52 = call i32 @FreePack(i32* %51)
  br label %53

53:                                               ; preds = %50, %18, %10
  ret void
}

declare dso_local i32 @SeekBufToBegin(i32*) #1

declare dso_local i32* @BufToPack(i32*) #1

declare dso_local %struct.TYPE_4__* @GetPackElementNames(i32*) #1

declare dso_local i32 @PackGetInt64(i32*, i8*) #1

declare dso_local i32 @SetDynListValue(i8*, i32) #1

declare dso_local i32 @FreeToken(%struct.TYPE_4__*) #1

declare dso_local i32 @FreePack(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
